--- a/ServerDemo/Pages/DateTimePickerPage.razor
+++ b/ServerDemo/Pages/DateTimePickerPage.razor
@@ -1,6 +1,8 @@
 ﻿@page "/DateTimePicker"
-
-<CloudHead Title="Date Time Picker" />
+@inject CloudPage cloudPage
+@{
+    cloudPage.Title = "Date Time Picker";
+}
 
 <div class="amc-datetimepicker-section">
     <div>
