--- a/ServerDemo/Pages/VideoPlayerPage.razor
+++ b/ServerDemo/Pages/VideoPlayerPage.razor
@@ -1,5 +1,7 @@
 ﻿@page "/VideoPlayer"
-
-<CloudHead Title="Video Player" />
+@inject CloudPage cloudPage
+@{
+    cloudPage.Title = "Video Player";
+}
 
 <VideoPlayer ReserveAspectRatio="true" VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" Autoplay="true" />
