--- a/ServerDemo/Pages/_Layout.cshtml
+++ b/ServerDemo/Pages/_Layout.cshtml
@@ -1,19 +1,16 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using AngryMonkey.CloudWeb;
+@using Microsoft.AspNetCore.Components.Web
 @using AngryMonkey.Cloud.Components
-@namespace ServerDemo.Pages
+@inject CloudPage cloudPage
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@namespace ServerDemo.Pages
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="~/" />
-    <component type="typeof(CloudHeadInit)" render-mode="ServerPrerendered" />
+    <component type="typeof(CloudHeadInit)" param-CloudPage="cloudPage" render-mode="Static" />
 </head>
 <body>
     @RenderBody()
-
-    <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
