--- a/ServerDemo/Pages/DialogPage.razor
+++ b/ServerDemo/Pages/DialogPage.razor
@@ -1,6 +1,8 @@
 ﻿@page "/Dialog"
-
-<CloudHead Title="Dialog" />
+@inject CloudPage cloudPage
+@{
+	cloudPage.Title = "Dialog";
+}
 
 <Dialog @ref="dialog" Title="Dialog Title" Buttons="DialogButtons">
 	Dialog Content
