--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -21,6 +21,10 @@
 	justify-content: stretch;
 	align-items: stretch;
 
+	* {
+		color: #fff;
+	}
+
 	&-content {
 		display: flex;
 		flex-direction: column;
@@ -292,7 +296,7 @@
 			padding: 4px;
 			display: flex;
 
-		::deep	svg {
+			::deep svg {
 				width: 24px;
 				height: 24px;
 			}
