--- a/ServerDemo/src/css/site.less
+++ b/ServerDemo/src/css/site.less
@@ -1,4 +1,6 @@
-﻿@import "variables.less";
+﻿@import "https://cdn.amcapi.com/cloudweb/1.0.2/cloud-base.less";
+@import "https://cdn.amcapi.com/cloudweb/1.0.2/cloud-sections.less";
+@import "variables.less";
 
 body {
 	background-color: #fff;
@@ -100,6 +102,10 @@ body {
 			height: 450px;
 			margin-left: auto;
 			margin-right: auto;
+
+			* {
+				color: #000;
+			}
 		}
 
 		.amc-datetimepicker-section {
