add button video stream live

--- a/ServerDemo/Pages/VideoPlayerPage.razor
+++ b/ServerDemo/Pages/VideoPlayerPage.razor
@@ -1,21 +1,24 @@
 ﻿@page "/VideoPlayer"
 @inject CloudPage cloudPage
+@inject IJSRuntime JR
 @{
     cloudPage.Title = "Video Player";
 }
 
-<section>
+<section class="video">
     <article>
-        <button @onclick="() => SetUrl(BlueMoonTrailerUrl)">Blue Moon Trailer</button>
-        <button @onclick="() => SetUrl(CoverboxUrl)">Coverbox</button>
+        <button class="--button" @onclick="() => SetUrl(BlueMoonTrailerUrl)">Blue Moon Trailer</button>
+        <button class="--button" @onclick="() => SetUrl(CoverboxUrl)">Coverbox</button>
+        <button class="--button" @onclick="() => SetUrl(LiveStreamingUrl)">Live Streaming</button>
     </article>
 </section>
 
-<VideoPlayer ReserveAspectRatio="true" VideoUrl="@VideoUrl" Autoplay="true" />
+<VideoPlayer ReserveAspectRatio="true"  VideoUrl="@VideoUrl" Autoplay="true" />
 
 @code {
     private const string BlueMoonTrailerUrl = "https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4";
     private const string CoverboxUrl = "https://cbxinfo-staging.azurewebsites.net/video/coverbox-platform.mp4";
+    private const string LiveStreamingUrl = "https://stmv1.cnarlatam.com/cineinfantil/cineinfantil/playlist.m3u8"; //"https://manar.live/iptv/playlist.m3u8";
 
     public string VideoUrl { get; set; } = "https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4";
 
