--- a/ServerDemo/src/css/site.less
+++ b/ServerDemo/src/css/site.less
@@ -122,5 +122,34 @@ body {
 				margin-bottom: 100px;
 			}
 		}
+
+		.video{
+			> article{
+				display:flex;
+				align-items:stretch;
+				justify-content:center;
+				gap:10px;
+				margin-bottom:30px;
+				flex-wrap:wrap;
+			}
+		}
+	}
+
+	.--button {
+		min-width: 150px;
+		padding: 15px;
+		border: 1px solid var(--LinkColor);
+		color: var(--LinkColor);
+		background-color: transparent;
+		font-size: .9rem;
+		text-transform: capitalize;
+		border-radius: 3px;
+		transition: all .3s ease-in-out;
+		cursor:pointer;
+
+		&:hover {
+			background-color: var(--LinkColor);
+			color: #fff;
+		}
 	}
 }
