--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -206,6 +206,7 @@
 		}
 	}
 
+	&-error,
 	&-video {
 		height: 100%;
 		width: 100%;
@@ -218,6 +219,14 @@
 			height: 100%;
 			width: 100%;
 		}
+	}
+
+	&-error {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 4em;
+		color: rgba(255, 255, 255, .4);
 	}
 
 	button {
