fix sudden error on streaming

--- a/ServerDemo/Pages/VideoPlayerPage.razor
+++ b/ServerDemo/Pages/VideoPlayerPage.razor
@@ -10,6 +10,7 @@
         <button class="--button" @onclick="() => SetUrl(BlueMoonTrailerUrl)">Blue Moon Trailer</button>
         <button class="--button" @onclick="() => SetUrl(CoverboxUrl)">Coverbox</button>
         <button class="--button" @onclick="() => SetUrl(LiveStreamingUrl)">Live Streaming</button>
+        <button class="--button" @onclick="() => SetUrl(Mayadeen)">Mayadeen</button>
         <button class="--button" @onclick="() => SetUrl(LiveStreamingNowWorking)">Live Streaming (Not Working)</button>
     </article>
 </section>
@@ -25,6 +26,7 @@
     private const string BlueMoonTrailerUrl = "https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4";
     private const string CoverboxUrl = "https://cbxinfo-staging.azurewebsites.net/video/coverbox-platform.mp4";
     private const string LiveStreamingUrl = "https://stmv1.cnarlatam.com/cineinfantil/cineinfantil/playlist.m3u8";
+    private const string Mayadeen = "https://mdnlv.cdn.octivid.com/almdn/smil:mpegts.stream.smil/playlist.m3u8";
     private const string LiveStreamingNowWorking = "https://dsadsadsadasdsadasdsadas.m3u8";
 
     private string? ErrorMessage { get; set; }
