hide video controlles when Video is not ready

--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -101,121 +101,124 @@
                 }
             </div>
 
-            <div class="amc-videoplayer-seekinfo">
-                <div class="amc-videoplayer-seekinfo-container">
-                    @*
+            @if (ShowBottomSections)
+            {
+                <div class="amc-videoplayer-seekinfo">
+                    <div class="amc-videoplayer-seekinfo-container">
+                        @*
                 <div class="amc-videoplayer-seekinfo-canvas">
                 <canvas />
                 </div>*@
 
-                    <div class="amc-videoplayer-seekinfo-duration">
-                        @DisplaySeekInfoTime
+                        <div class="amc-videoplayer-seekinfo-duration">
+                            @DisplaySeekInfoTime
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="amc-videoplayer-controls">
-                <div class="amc-videoplayer-controls-left">
-                    @* Play *@
-                    <div class="amc-videoplayer-play">
-                        <button @onclick="PlayVideo">
-                            <AngryMonkey.Cloud.Components.Icons.PlayButton />
-                        </button>
+                <div class="amc-videoplayer-controls">
+                    <div class="amc-videoplayer-controls-left">
+                        @* Play *@
+                        <div class="amc-videoplayer-play">
+                            <button @onclick="PlayVideo">
+                                <AngryMonkey.Cloud.Components.Icons.PlayButton />
+                            </button>
+                        </div>
+
+                        @* Pause *@
+                        <div class="amc-videoplayer-pause">
+                            <button @onclick="PauseVideo">
+                                <AngryMonkey.Cloud.Components.Icons.PauseButton />
+                            </button>
+                        </div>
+
+                        @* Stop *@
+                        @if (ShowStopButton)
+                        {
+                            <div class="amc-videoplayer-stop">
+                                <button @onclick="StopVideo">
+                                    <svg viewBox="0 0 8 8">
+                                        <rect class="amc-videoplayer-svg-stroke" x="1.5" y="1.5" width="5" height="5" rx="0.78" />
+                                    </svg>
+                                </button>
+                            </div>
+                        }
+
+                        @* Volume *@
+                        <div class="amc-videoplayer-volume @(DoShowVolumeControls? "_extended": string.Empty)" @onclick="OnVolumeButtonClick">
+                            <VolumeBar Value="@Volume" IsMuted="IsMuted" Extended="DoShowVolumeControls" OnChanging="OnVolumeChanging"></VolumeBar>
+                        </div>
+
+                        @if (ShowDuration)
+                        {
+                            @* Current Time / Duration *@
+                            <div class="amc-videoplayer-timeduration">
+                                @DisplayTimeDuration
+                            </div>
+                        }
+
+                        @* Status *@
+                        <div class="amc-videoplayer-status">
+                            @if (Status == VideoStatus.Buffering || Status == VideoStatus.Streaming)
+                            {
+                                <AngryMonkey.Cloud.Components.Icons.Loading />
+                            }
+                        </div>
                     </div>
 
-                    @* Pause *@
-                    <div class="amc-videoplayer-pause">
-                        <button @onclick="PauseVideo">
-                            <AngryMonkey.Cloud.Components.Icons.PauseButton />
-                        </button>
+                    <div class="amc-videoplayer-controls-middle">
+                        <div class="amc-videoplayer-duration">
+                            <span></span>
+                        </div>
                     </div>
 
-                    @* Stop *@
-                    @if (ShowStopButton)
-                    {
-                        <div class="amc-videoplayer-stop">
-                            <button @onclick="StopVideo">
+                    <div class="amc-videoplayer-controls-right">
+                        <div class="amc-videoplayer-more">
+                            <button @onclick="MoreButtonInfo">
                                 <svg viewBox="0 0 8 8">
-                                    <rect class="amc-videoplayer-svg-stroke" x="1.5" y="1.5" width="5" height="5" rx="0.78" />
+                                    <path class="amc-videoplayer-svg-stroke" d="M1.57,4.55l.33,0A.16.16,0,0,1,2,4.68a2,2,0,0,0,.15.37.17.17,0,0,1,0,.18L2,5.48A.22.22,0,0,0,2,5.8l.34.35a.25.25,0,0,0,.33,0L2.89,6a.15.15,0,0,1,.17,0,1.37,1.37,0,0,0,.38.15.15.15,0,0,1,.1.13q0,.18,0,.33a.23.23,0,0,0,.24.22h.5a.24.24,0,0,0,.24-.22,3.25,3.25,0,0,0,0-.33.18.18,0,0,1,.11-.13,1.37,1.37,0,0,0,.38-.15.15.15,0,0,1,.17,0l.25.22a.23.23,0,0,0,.32,0l.35-.35a.23.23,0,0,0,0-.32L6,5.23a.17.17,0,0,1,0-.18,1.53,1.53,0,0,0,.16-.37.15.15,0,0,1,.12-.11l.33,0a.25.25,0,0,0,.23-.25V3.81a.24.24,0,0,0-.23-.24l-.33,0a.13.13,0,0,1-.12-.1,1.8,1.8,0,0,0-.16-.38.15.15,0,0,1,0-.17l.22-.25a.25.25,0,0,0,0-.33L5.8,2a.23.23,0,0,0-.32,0,2.32,2.32,0,0,0-.25.22.15.15,0,0,1-.17,0A2.5,2.5,0,0,0,4.68,2a.16.16,0,0,1-.11-.13,3,3,0,0,0,0-.32.25.25,0,0,0-.24-.23h-.5a.24.24,0,0,0-.24.23c0,.09,0,.21,0,.32a.14.14,0,0,1-.1.13,2.5,2.5,0,0,0-.38.15.15.15,0,0,1-.17,0A2.32,2.32,0,0,0,2.64,2a.24.24,0,0,0-.33,0L2,2.31a.25.25,0,0,0,0,.33l.22.25a.15.15,0,0,1,0,.17A2.5,2.5,0,0,0,2,3.44a.13.13,0,0,1-.13.1l-.32,0a.24.24,0,0,0-.23.24V4.3A.24.24,0,0,0,1.57,4.55Z" />
+                                    <path class="amc-videoplayer-svg-stroke" d="M4.06,4.83a.77.77,0,1,0-.77-.77A.76.76,0,0,0,4.06,4.83Z" />
                                 </svg>
                             </button>
                         </div>
-                    }
 
-                    @* Volume *@
-                    <div class="amc-videoplayer-volume @(DoShowVolumeControls? "_extended": string.Empty)" @onclick="OnVolumeButtonClick">
-                        <VolumeBar Value="@Volume" IsMuted="IsMuted" Extended="DoShowVolumeControls" OnChanging="OnVolumeChanging"></VolumeBar>
-                    </div>
-
-                    @if (ShowDuration)
-                    {
-                        @* Current Time / Duration *@
-                        <div class="amc-videoplayer-timeduration">
-                            @DisplayTimeDuration
+                        <div class="amc-videoplayer-fullscreen">
+                            @if (!IsFullScreen)
+                            {
+                                <button class="amc-videoplayer-enterfullscreen" @onclick="EnterFullScreen">
+                                    <svg viewBox="0 0 8 8">
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="6.25" y1="1.71" x2="3.75" y2="1.71" />
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="6.25" y1="4.29" x2="6.25" y2="1.79" />
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="1.75" y1="6.29" x2="4.25" y2="6.29" />
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="1.75" y1="3.71" x2="1.75" y2="6.21" />
+                                    </svg>
+                                </button>
+                            }
+                            else
+                            {
+                                <button class="amc-videoplayer-exitfullscreen" @onclick="ExitFullScreen">
+                                    <svg viewBox="0 0 8 8">
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="4.03" y1="3.41" x2="5.8" y2="1.64" />
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="2.2" y1="1.59" x2="3.97" y2="3.36" />
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="3.97" y1="4.59" x2="2.2" y2="6.36" />
+                                        <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="5.8" y1="6.41" x2="4.03" y2="4.64" />
+                                    </svg>
+                                </button>
+                            }
                         </div>
-                    }
-
-                    @* Status *@
-                    <div class="amc-videoplayer-status">
-                        @if (Status == VideoStatus.Buffering || Status == VideoStatus.Streaming)
-                        {
-                            <AngryMonkey.Cloud.Components.Icons.Loading />
-                        }
                     </div>
                 </div>
 
-                <div class="amc-videoplayer-controls-middle">
-                    <div class="amc-videoplayer-duration">
-                        <span></span>
+                @if (ShowProgressBar)
+                {
+                    <div class="amc-videoplayer-progress"
+                    @onmousedown="OnProgressMouseDown"
+                    @ontouchstart="OnProgressTouchStart"
+                    @onmousemove="OnProgressMouseMove"
+                    @onmouseout="OnProgressMouseOut">
+                        <ProgressBar Value="CurrentTime" Total="CurrentVideoInfo?.Duration ?? 0" Style="ProgressBarStyle" OnChanged="OnProgressChanged" OnChanging="OnProgressChanging" />
                     </div>
-                </div>
-
-                <div class="amc-videoplayer-controls-right">
-                    <div class="amc-videoplayer-more">
-                        <button @onclick="MoreButtonInfo">
-                            <svg viewBox="0 0 8 8">
-                                <path class="amc-videoplayer-svg-stroke" d="M1.57,4.55l.33,0A.16.16,0,0,1,2,4.68a2,2,0,0,0,.15.37.17.17,0,0,1,0,.18L2,5.48A.22.22,0,0,0,2,5.8l.34.35a.25.25,0,0,0,.33,0L2.89,6a.15.15,0,0,1,.17,0,1.37,1.37,0,0,0,.38.15.15.15,0,0,1,.1.13q0,.18,0,.33a.23.23,0,0,0,.24.22h.5a.24.24,0,0,0,.24-.22,3.25,3.25,0,0,0,0-.33.18.18,0,0,1,.11-.13,1.37,1.37,0,0,0,.38-.15.15.15,0,0,1,.17,0l.25.22a.23.23,0,0,0,.32,0l.35-.35a.23.23,0,0,0,0-.32L6,5.23a.17.17,0,0,1,0-.18,1.53,1.53,0,0,0,.16-.37.15.15,0,0,1,.12-.11l.33,0a.25.25,0,0,0,.23-.25V3.81a.24.24,0,0,0-.23-.24l-.33,0a.13.13,0,0,1-.12-.1,1.8,1.8,0,0,0-.16-.38.15.15,0,0,1,0-.17l.22-.25a.25.25,0,0,0,0-.33L5.8,2a.23.23,0,0,0-.32,0,2.32,2.32,0,0,0-.25.22.15.15,0,0,1-.17,0A2.5,2.5,0,0,0,4.68,2a.16.16,0,0,1-.11-.13,3,3,0,0,0,0-.32.25.25,0,0,0-.24-.23h-.5a.24.24,0,0,0-.24.23c0,.09,0,.21,0,.32a.14.14,0,0,1-.1.13,2.5,2.5,0,0,0-.38.15.15.15,0,0,1-.17,0A2.32,2.32,0,0,0,2.64,2a.24.24,0,0,0-.33,0L2,2.31a.25.25,0,0,0,0,.33l.22.25a.15.15,0,0,1,0,.17A2.5,2.5,0,0,0,2,3.44a.13.13,0,0,1-.13.1l-.32,0a.24.24,0,0,0-.23.24V4.3A.24.24,0,0,0,1.57,4.55Z" />
-                                <path class="amc-videoplayer-svg-stroke" d="M4.06,4.83a.77.77,0,1,0-.77-.77A.76.76,0,0,0,4.06,4.83Z" />
-                            </svg>
-                        </button>
-                    </div>
-
-                    <div class="amc-videoplayer-fullscreen">
-                        @if (!IsFullScreen)
-                        {
-                            <button class="amc-videoplayer-enterfullscreen" @onclick="EnterFullScreen">
-                                <svg viewBox="0 0 8 8">
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="6.25" y1="1.71" x2="3.75" y2="1.71" />
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="6.25" y1="4.29" x2="6.25" y2="1.79" />
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="1.75" y1="6.29" x2="4.25" y2="6.29" />
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="1.75" y1="3.71" x2="1.75" y2="6.21" />
-                                </svg>
-                            </button>
-                        }
-                        else
-                        {
-                            <button class="amc-videoplayer-exitfullscreen" @onclick="ExitFullScreen">
-                                <svg viewBox="0 0 8 8">
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="4.03" y1="3.41" x2="5.8" y2="1.64" />
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="2.2" y1="1.59" x2="3.97" y2="3.36" />
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="3.97" y1="4.59" x2="2.2" y2="6.36" />
-                                    <line class="amc-videoplayer-svg-stroke _corner-rounded" x1="5.8" y1="6.41" x2="4.03" y2="4.64" />
-                                </svg>
-                            </button>
-                        }
-                    </div>
-                </div>
-            </div>
-
-            @if (ShowProgressBar)
-            {
-                <div class="amc-videoplayer-progress"
-                @onmousedown="OnProgressMouseDown"
-                @ontouchstart="OnProgressTouchStart"
-                @onmousemove="OnProgressMouseMove"
-                @onmouseout="OnProgressMouseOut">
-                    <ProgressBar Value="CurrentTime" Total="CurrentVideoInfo?.Duration ?? 0" Style="ProgressBarStyle" OnChanged="OnProgressChanged" OnChanging="OnProgressChanging" />
-                </div>
+                }
             }
         </div>
     }
