--- a/ServerDemo/Pages/VideoPlayerPage.razor
+++ b/ServerDemo/Pages/VideoPlayerPage.razor
@@ -12,12 +12,21 @@
         <button class="--button" @onclick="() => SetUrl(LiveStreamingUrl)">Live Streaming</button>
         <button class="--button" @onclick="() => SetUrl(Mayadeen)">Mayadeen</button>
         <button class="--button" @onclick="() => SetUrl(LiveStreamingNowWorking)">Live Streaming (Not Working)</button>
+        <button class="--button" @onclick="() => SetUrl(LiveStreamNotFound)">Live Streaming (Not Found)</button>
+        <button class="--button" @onclick="() => SetUrl(null)">Empty Url</button>
     </article>
 </section>
 
 <h2>@ErrorMessage</h2>
 
-<VideoPlayer @ref="Player" ReserveAspectRatio="true" VideoUrl="@VideoUrl" Autoplay="true" OnVideoError="Player_OnVideoError" OnVideoReady="Player_OnVideoReady" />
+<VideoPlayer @ref="Player" ReserveAspectRatio="true" VideoUrl="@VideoUrl" Autoplay="true" OnVideoError="Player_OnVideoError" OnVideoReady="Player_OnVideoReady" OnEvent="Player_OnEvent" />
+
+<div>
+    @foreach(string eventLog in EventLogs)
+    {
+        <p>@eventLog</p>
+    }
+</div>
 
 <video id="TestVideo"></video>
 
@@ -27,24 +36,36 @@
     private const string CoverboxUrl = "https://cbxinfo-staging.azurewebsites.net/video/coverbox-platform.mp4";
     private const string LiveStreamingUrl = "https://stmv1.cnarlatam.com/cineinfantil/cineinfantil/playlist.m3u8";
     private const string Mayadeen = "https://mdnlv.cdn.octivid.com/almdn/smil:mpegts.stream.smil/playlist.m3u8";
-    private const string LiveStreamingNowWorking = "https://dsadsadsadasdsadasdsadas.m3u8";
+    private const string LiveStreamingNowWorking = "http://istream.binarywaves.com:8081/hls/arabica/playlist.m3u8";
+    private const string LiveStreamNotFound = "https://dsadsadsadasdsadasdsadas.m3u8";
 
     private string? ErrorMessage { get; set; }
+    private List<string> EventLogs { get; set; } = new();
 
-    public string VideoUrl { get; set; } = BlueMoonTrailerUrl;
+    public string? VideoUrl { get; set; } = BlueMoonTrailerUrl;
 
     private void Player_OnVideoReady()
     {
         ErrorMessage = null;
+        StateHasChanged();
     }
 
     private void Player_OnVideoError()
     {
         ErrorMessage = "Error";
+        StateHasChanged();
     }
 
-    public void SetUrl(string url)
+    private void Player_OnEvent(VideoEventData data)
     {
+        EventLogs.Add($"Event: {data.EventName}");
+        StateHasChanged();
+    }
+
+    public void SetUrl(string? url)
+    {
+        EventLogs = new();
         VideoUrl = url;
+        StateHasChanged();
     }
 }
